# temp

./: README.md  index.html  package-lock.json  package.json  setting.html  vite.config.ts
src/: index.html  index.js  main.ts  setting.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: define.rs  main.rs  weather.rs  window.rs
